Fix dependencie and dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,9 +2,14 @@ FROM debian
 
 ENV DEBIAN_FRONTEND noninteractive
 
-RUN apt-get update && apt-get install -y --no-install-recommends python3 python3-pip nano python3-flask python3-flaskext.wtf \
-	 python3-dnspython python3-flask-login
+RUN apt-get update && apt-get install -y --no-install-recommends git python3 python3-pip python3-setuptools nano python3-wheel \
+ python3-dev build-essential netbase && apt-get autoremove && apt-get clean && \
+ mkdir -p /app && git clone https://github.com/gilles67/h42-auth.git /app/h42-auth && \
+ pip3 install flask werkzeug==0.16.0 flask-bootstrap flask-socketio flask-login flask-session \
+ flask-cors flask-wtf gunicorn eventlet tinydb && \
+ chmod a+x /app/h42-auth/prod-app.sh && \
+ apt-get remove python3-dev build-essential && apt-get autoremove && apt-get clean
 
 EXPOSE 5000
 
-CMD ["/bin/bash"]
+CMD ["/app/h42-auth/prod-app.sh"]
