--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends git python3 pyt
  pip3 install flask werkzeug==0.16.0 flask-bootstrap flask-socketio flask-login flask-session \
  flask-cors flask-wtf gunicorn eventlet tinydb && \
  chmod a+x /app/h42-auth/prod-app.sh && \
- apt-get remove python3-dev build-essential && apt-get autoremove && apt-get clean
+ apt-get purge -y python3-dev build-essential && apt-get -y autoremove && apt-get clean
 
 EXPOSE 5000
 
